# GCES-trabalho-final

./: .gitlab-ci.yml  Doxyfile  docker-compose.yaml  pyproject.toml
app/: Dockerfile  requirements.txt
sphinx-docs/: conf.py  index.rst
sphinx-docs/_build/doctrees/: environment.pickle  index.doctree
sphinx-docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx-docs/_build/html/_sources/: index.rst.txt
