[tool.poetry]
name = "gces-trabalho-final"
version = "0.1.0"
description = "Genarate poetry pyproject.toml"
authors = ["vitorekr <vitorekrlol@gmail.com>"]
readme = "README.md"
packages = [{include = "gces_trabalho_final"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
