[tool.poetry]
name = "gces-trabalho-final"
version = "0.1.0"
description = "Genarate poetry pyproject.toml"
authors = ["vitorekr <vitorekrlol@gmail.com>"]
readme = "README.md"
packages = [{include = "gces_trabalho_final"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
requests = "^2.28.2"
altair = "4.2.0"
attrs = "22.2.0"
bpemb = "0.3.4"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
contourpy = "1.0.6"
coverage = "7.0.2"
cycler = "0.11.0"
entrypoints = "0.4"
exceptiongroup = "1.1.0"
fonttools = "4.38.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
